# astrabot

./: .env.example  .gitignore  README.md  astra.toml.example  pyproject.toml
.playwright-cli/: page-2026-04-05T19-31-16-618Z.yml  page-2026-04-13T01-41-52-719Z.yml  page-2026-04-13T01-43-04-136Z.yml  page-2026-04-13T01-43-23-596Z.yml  page-2026-04-13T01-43-37-640Z.yml  page-2026-04-13T01-44-05-058Z.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: AgentSlideOut.tsx  AppDialog.tsx  BottomDrawer.tsx  DocHeader.tsx  FileTree.tsx  MarkdownEditor.tsx  MarkdownPreview.tsx  Omnibar.tsx  StatusBar.tsx  ToastStack.tsx  WelcomeView.tsx
src/astra/: __init__.py  agent_runtime.py  app_server.py  cli.py  events.py  scheduling.py  service.py  settings.py  state.py  vault.py  web.py  web_state.py
src/astra/frontends/: __init__.py  telegram_bot.py  tui.py
src/astra/static/: app.js  styles.css
src/astra/templates/: index.html
