[project]
name = "astra"
version = "0.1.0"
description = "A simple Telegram and TUI bridge for Codex app-server."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "python-telegram-bot>=22.0,<23.0",
  "uvicorn>=0.34.0,<1.0.0",
  "websockets>=15.0.0,<16.0.0",
]

[project.scripts]
astra = "astra.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
